crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__openstack_dashboard__templatetags__context_selection.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/openstack_dashboard/templatetags/context_selection.py
---
tag_rules:
  "openstack_dashboard.templatetags.context_selection::tag::iframe_embed_settings":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::is_multi_region":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "openstack_dashboard.templatetags.context_selection::tag::is_multidomain":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "openstack_dashboard.templatetags.context_selection::tag::show_domain_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::show_overview":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::show_project_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::show_region_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::show_system_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "openstack_dashboard.templatetags.context_selection::tag::show_systems":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
filter_arities: {}
block_specs: {}
