crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__openstack_dashboard__templatetags__themes.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/openstack_dashboard/templatetags/themes.py
---
tag_rules:
  "openstack_dashboard.templatetags.themes::tag::current_theme":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "openstack_dashboard.templatetags.themes::tag::themable_asset":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: asset
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "openstack_dashboard.templatetags.themes::tag::theme_cookie":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "openstack_dashboard.templatetags.themes::tag::theme_dir":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "openstack_dashboard.templatetags.themes::tag::themes":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
filter_arities: {}
block_specs: {}
